# corium

./: .gitignore  .gitmodules  README.md  build.meson  dependencies.lua  meson.build  premake5.lua
corium/: premake5.lua
corium/src/: corium.h  crpch.h
corium/src/core/: entry_point.h  log.h
sandbox/: premake5.lua
sandbox/src/: application.cpp
scripts/: build.sh  install.sh  uninstall.sh
src/: core.cpp  core.hpp  corium.cpp  corium.hpp  window.cpp  window.hpp
src/Event/: event.cpp  event.hpp
src/Input/: input.cpp  input.hpp
